--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,27 @@
   </head>
 
   <body>
+    <nav>
+     <div class="nav-wrapper">
+       <a href="/" class="brand-logo">Pretzy</a>
+       <% if user_signed_in? %>
+         <ul id="nav-mobile" class="right hide-on-med-and-down">
+           Logged in as <%= current_user.email %>
+           <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
+           <li><%= link_to 'Log-out', destroy_user_session_path, method: :delete %></li>
+           <li class="round-image-50"><%= image_tag current_user.avatar.url(:thumb) %></li>
+         </ul>
+       <% else %>
+         <ul id="nav-mobile" class="right hide-on-med-and-down">
+           <li><%= link_to 'Sign Up', new_user_registration_path %></li>
+           <li><%= link_to 'Login', new_user_session_path %></li>
+         </ul>
+       <% end %>
+     </div>
+   </nav>
+   <div class="container">
+    <%= flash[:alert] %>
+    <%= flash[:notice] %>
     <%= yield %>
   </body>
 </html>
