--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,6 +2,10 @@
 
 <ul>
   <% @products.each do |product| %>
-    <li><%= link_to product.name, product_path(product) %></li>  
+    <li><%= link_to product.name, product_path(product) %></li>
   <% end %>
 </ul>
+
+<%= link_to "Add a Product", new_product_path %>
+
+<%= link_to "View All Products", root_path %>
