--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,3 +1,4 @@
+<%= render "layouts/errors", :object => @product %>
 
 <%= form_for @product, url: products_path, html: { multipart: true } do |f| %>
   <h5>Product Name</h5>
