--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -4,6 +4,11 @@
   <%= devise_error_messages! %>
 
   <div class="field">
+   <%= f.label :avatar %>
+   <%= f.file_field :avatar %>
+  </div>
+
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
@@ -20,6 +25,8 @@
       <em><%= @minimum_password_length %> characters minimum</em>
     <% end %>
   </div>
+
+
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
