add migrations to add comments and images to products. remove images table. not necessary to have separate images table

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,10 @@
 <h1>Welcome to Craftsy!</h1>
 
 <% if user_signed_in? %>
-  <%= link_to "Personal Craft Gallery", products_path(@products) %>
+  <%= link_to "Personal Craft Gallery", user_products_path(@products, @user) %>
 <% end %>
 
+<% @products.each do |product| %>
+<%= link_to product.name, product_path %>
+<% end %>
 <br>
