--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,9 +2,10 @@
 
 <% if user_signed_in? %>
   <%= link_to "Personal Craft Gallery", user_products_path(@products, @user) %>
+  <%= link_to "Add a new Product", new_user_product_path(@user, @product) %>
 <% end %>
 
 <% @products.each do |product| %>
-<%= link_to product.name, product_path %>
+<%= link_to product.name, products_path %>
 <% end %>
 <br>
