implement rails_admin gem to allow a specific user to have admin capabilities

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,9 @@
            <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
            <li><%= link_to 'Log-out', destroy_user_session_path, method: :delete %></li>
           <li class="round-image-50"><%= image_tag(current_user.avatar.url(:thumb)) %></li>
+          <% if current_user.admin %>
+             <li><%= link_to "Admin", rails_admin_path %></li>
+           <% end %>
          </ul>
        <% else %>
          <ul id="nav-mobile" class="right hide-on-med-and-down">
