--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
-<h1>Welcome to Craftsy!</h1>
+<h1>Welcome to Pretzy!</h1>
+<p>Pretzy is a website focused on handmade or vintage items and supplies, as well as unique factory-manufactured items. These items cover a wide range, including art, photography, clothing, jewelry, food, bath and beauty products, quilts, knick-knacks, and toys. Many sellers also sell craft supplies such as beads, wire and jewelry-making tools. All vintage items must be at least 20 years old.</p>
 
 <% if user_signed_in? %>
   <%= link_to "Personal Craft Gallery", user_products_path(@products, @user) %>
