--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,8 +5,10 @@
 <%= image_tag @product.image  %>
 
 <% if user_signed_in? %>
+  <% if current_user.id == @product.owner_id %>
     <p><%= link_to "Edit", edit_user_product_path(@user, @product) %></p>
     <p><%= link_to "Delete Product", user_product_path(@user, @product), :data => {:confirm => "REALLY???", :method => "delete"} %></p>
+  <% end %>
 <% end %>
 
 <p><%= link_to "Return to products", products_path %></p>
