repair database to replace admin string with a boolean to allow a specific user to have admin capabilities

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,15 +8,14 @@
   <% @comments.each do |comment| %>
   <li><%= comment.content %></li>
   <li><%= comment.author %></li>
-
   <% end %>
 </ul>
 
 <% if user_signed_in? %>
-  <% if current_user.id == @product.owner_id %>
+  <p><%= link_to "Leave a Comment About This Product", new_product_comment_path(@product) %>
+    <% if current_user.admin %>
     <p><%= link_to "Edit", edit_user_product_path(@user, @product) %></p>
     <p><%= link_to "Delete Product", user_product_path(@user, @product), :data => {:confirm => "REALLY???", :method => "delete"} %></p>
-    <p><%= link_to "Leave a Comment About This Product", new_product_comment_path(@product) %>
   <% end %>
 <% end %>
 
